--- a/game.html
+++ b/game.html
@@ -11,6 +11,26 @@
 <body>
     <div class="container">
         <div id="game" class="justify-center flex-column">
+             <div id="hud">
+                 <div id="hud-item">
+                     <p id="progressText" class="hud-prefix">
+                        Question
+                     </p>
+                     <div id="progressBar">
+                         <div id="progressBarfull">
+
+                         </div>
+                     </div>
+                 </div>
+                 <div id="hud-item">
+                     <p class="hud-prefix">
+                        Score
+                     </p>
+                     <h1 class="hud-main-text" id="score">
+                        0
+                     </h1>
+                 </div>
+             </div>
             <h1 id="question">what is the question</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
