--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="./game.css">
-    <title>Document</title>
+    <title>Q|CBT</title>
 </head>
 <body>
     <div class="container">
