--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Quick mimi</title>
+    <title>Welcome</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div id="home" class="flex-center flex-column">
             <h1>Quick CBT</h1>
             <a class="btn" href="./game.html">play</a>
-            <a class="btn" href="./highscore.html">highscore</a>
+            <a class="btn" href="./highscores.html">highscore</a>
     </div>
     </div>
 </body>
