button positioning alt styles

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div id="home" class="flex-center flex-column">
             <h1>Quick CBT</h1>
-            <a class="btn" href="./game.html">play</a>
-            <a class="btn" href="./highscores.html">highscore</a>
+            <a class="btn4" href="./game.html">play</a>
+            <a class="btn4" href="./highscores.html">highscore</a>
     </div>
     </div>
 </body>
