--- a/highscores.html
+++ b/highscores.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>High Scores</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./highscores.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/highscores.css">
 </head>
 <body>
     <div class="container">
@@ -17,6 +17,6 @@
             <a href="/" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="highscores.js"></script>
+    <script src="./js/highscores.js"></script>
 </body>
 </html>
