--- a/index.html
+++ b/index.html
@@ -5,15 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
+        <div class="colorswitch">
+            <div class="colors">
+                <h3>Theme colors</h3>
+                <ul class="theme-colors">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                <br>
+                <h3>text color</h3>
+                <ul class="text-colors">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <p id="themes-btn"><i class="fa fa-gear fa-2x fa-spin"></i></p>
+        </div>
         <div id="home" class="flex-center flex-column">
             <h1>Quick CBT</h1>
             <a class="btn4" href="./game.html">play</a>
             <a class="btn4" href="./highscores.html">highscore</a>
     </div>
     </div>
+     <script src="./js/jquery-1.11.2.min.js"></script>
+     <script src="./js/jquery-1.12.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="./js/switch.js"></script>
+
 </body>
 </html>
