--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Congrats!</title>
-    <link rel="stylesheet" type="text/css" href="./style/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
                 <a href="/" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="./js/end.js"></script>
+    <script src="end.js"></script>
 </body>
 </html>
