--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome</title>
-    <link rel="stylesheet" type="text/css" href="./style/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -46,11 +46,11 @@
             <a class="btn4" href="./highscores.html">highscore</a>
     </div>
     </div>
-     <script src="./js/jquery-1.11.2.min.js"></script>
-     <script src="./js/jquery-1.12.1.min.js"></script>
+     <script src="jquery-1.11.2.min.js"></script>
+     <script src="jquery-1.12.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="./js/switch.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="switch.js"></script>
+    <script src="main.js"></script>
     
 
 </body>
