--- a/game.html
+++ b/game.html
@@ -32,26 +32,34 @@
                      </h1>
                  </div>
              </div>
-            <h1 id="question"></h1>
-            <div class="choice-container">
-                <p class="choice-prefix">A</p>
-                <p class="choice-text" data-number="1"></p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">B</p>
-                <p class="choice-text" data-number="2"></p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">C</p>
-                <p class="choice-text" data-number="3"></p>
-            </div>
-            <div class="choice-container">
-                <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4"></p>
-            </div>
-
+             <div class="q1">
+                
+                <h1 id="question"></h1>
+                <div class="choice-container">
+                    <p class="choice-prefix">A</p>
+                    <p class="choice-text" data-number="1"></p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">B</p>
+                    <p class="choice-text" data-number="2"></p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">C</p>
+                    <p class="choice-text" data-number="3"></p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-prefix">D</p>
+                    <p class="choice-text" data-number="4"></p>
+                </div>
+             </div>
+        </div>
+        <div id="count">
+            <h1>Timer</h1>
+            <div class="counter"></div>
+            <button class="tbtn" onclick="sumbit()">submit</button>
         </div>
     </div>
     <script src="main.js"></script>
+    <script src="time.js"></script>
 </body>
 </html>
